--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>   
          <div class="row h-100 justify-content-center align-items-center">  
             <div class="card col-12 col-md-4 ml-5 mb-5 mt-5" style="width: 18rem;">
-                <img src="project/project1.jpg" class="card-img-top" alt="Nutrition Source" >
+                <img src="project/pro1.jpg" class="card-img-top" alt="Nutrition Source" >
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Recipe</strong></h5>
                     <p class="card-text">Very first project.<br>Taken the content for recipe and Nutrition<br>HTML and CSS </p>
