--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>        
                  
             <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro4.jpg" class="card-img-top" alt="Food Delivary System">
+                <img src="project/pro4.JPG" class="card-img-top" alt="Food Delivary System">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Food Delivary System</strong></h5>
                     <p class="card-text">Basic concepts of food Delivary system using HTML, CSS, JavaScript,LocalStorage,URL Search params</p>
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro3.jpg" class="card-img-top" alt="Recipe Book">
+                <img src="project/pro3.JPG" class="card-img-top" alt="Recipe Book">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Recipe Book</strong></h5>
                     <p class="card-text">Project with Recipe Book with mealDB API.<br>HTML, Advance CSS<br> JavaScript, XHR</p>
@@ -188,7 +188,7 @@
         <div class="row justify-content-center">  
             
             <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro2.jpg" class="card-img-top" alt="Food Delivary System">
+                <img src="project/pro2.JPG" class="card-img-top" alt="Food Delivary System">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Food Delivary System</strong></h5>
                     <p class="card-text">Next responsive project.<br>Media queries,CSS combinators , Box Model, Floats, Flex and Grids etc.</p>
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-3  m-3" style="width: 25rem;">
-                <img src="project/pro1.jpg" class="card-img-top" alt="Nutrition Source" >
+                <img src="project/pro1.JPG" class="card-img-top" alt="Nutrition Source" >
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Recipe</strong></h5>
                     <p class="card-text">Very first project.<br>Taken the content for recipe and Nutrition<br>HTML and CSS </p>
