--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                         <img src="img/bootstrap.svg" alt="Bootstrap" height="30">
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/AlokKothiyal1/Masai_typing/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Code</a>
-                        <a href="" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Demo</a>
+                        <a href="https://github.com/AlokKothiyal1/Masai_typing/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #425de6;">Code</a>
+                        <a href="" target="_blank" class="btn text-white" style="background-color: #425de6;">Demo</a>
                     </div>
                 </div>
             </div>        
@@ -161,8 +161,8 @@
                         <img src="img//js.svg" class="mr-3" alt="JS" height="30">
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/soundaryamecse/Masai-Sprint-4/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Code</a>
-                        <a href="https://soundaryamecse.github.io/Masai-Sprint-4/" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Demo</a>
+                        <a href="https://github.com/soundaryamecse/Masai-Sprint-4/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #425de6;">Code</a>
+                        <a href="https://soundaryamecse.github.io/Masai-Sprint-4/" target="_blank" class="btn text-white" style="background-color: #425de6;">Demo</a>
                     </div>
                 </div>
             </div>
@@ -178,8 +178,8 @@
                         <img src="img/bootstrap.svg" alt="Bootstrap" height="30">
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/soundaryamecse/masai_sprint3/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Code</a>
-                        <a href="https://soundaryamecse.github.io/masai_sprint3/" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Demo</a>
+                        <a href="https://github.com/soundaryamecse/masai_sprint3/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #425de6;">Code</a>
+                        <a href="https://soundaryamecse.github.io/masai_sprint3/" target="_blank" class="btn text-white" style="background-color: #425de6;">Demo</a>
                     </div>
                 </div>
             </div>
@@ -198,8 +198,8 @@
                         <img src="img/js.svg" alt="JS" height="30">
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/soundaryamecse/masai_sprint2/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Code</a>
-                        <a href="https://soundaryamecse.github.io/masai_sprint2/" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Demo</a>
+                        <a href="https://github.com/soundaryamecse/masai_sprint2/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #425de6;">Code</a>
+                        <a href="https://soundaryamecse.github.io/masai_sprint2/" target="_blank" class="btn text-white" style="background-color: #425de6;">Demo</a>
                     </div>
                 </div>
             </div>
@@ -213,8 +213,8 @@
                         <img src="img/css.svg" alt="CSS3" height="30">
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/soundaryamecse/masai_sprint1/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Code</a>
-                        <a href="https://soundaryamecse.github.io/masai_sprint1/" target="_blank" class="btn text-white" style="background-color: #5b73ea;">Demo</a>
+                        <a href="https://github.com/soundaryamecse/masai_sprint1/blob/master/index.html" target="_blank" class="btn text-white" style="background-color: #425de6;">Code</a>
+                        <a href="https://soundaryamecse.github.io/masai_sprint1/" target="_blank" class="btn text-white" style="background-color: #425de6;">Demo</a>
                     </div>
                 </div>
             </div>
@@ -226,46 +226,46 @@
     
 
         <!-- **************************************************************************************************** -->
-    <div class="container-fluid " style="background: #C8F2EE">
-        <div class="row h-100 circleforcoding" style="margin-bottom: 150px">
+    <div class="container-fluid ">
+        <div class="row circleforcoding" style="margin-bottom: 150px">
             <div class="col-lg-3 col-md-12 col-sm-12 mt-5 ml-5">
-                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color: #06BEB6"
+                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid rgb(77, 187, 241)"
                     class="mt-1">
-                    <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px">
+                    <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px;">
                         1000+
                     </p>
                 </div>
-                <p class="mt-4 font-weight-bold" style="color:#5D86B4; font-size: 35px;margin-left:-55px;">
+                <p class="mt-4 font-weight-bold" style="color:#425de6; font-size: 35px;margin-left:45px;">
                     Hours
                 </p>
-                <p class="offset-1" style="font-size: 25px; margin-left:-45px;margin-top:-20px;color:#5D86B4">
+                <p class="offset-1" style="font-size: 25px; margin-left:-25px;margin-top:-20px;color:#425de6">
                     of Full Stack coding
                 </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 mt-5 ml-5">
-                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color: #06BEB6"
+                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color: rgb(77, 187, 241)"
                     class="mt-1">
                     <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px">
                         50+
                     </p>
                 </div>
-                <p class="display-4 mt-4 font-weight-bold" style="margin-left: -40px;color:#5D86B4;font-size: 35px">
+                <p class="display-4 mt-4 font-weight-bold" style="margin-left:10px;color:#425de6;font-size: 35px">
                     HackerRank</p>
-                <p style="font-size: 25px; margin-left: -50px;margin-top:-15px;color:#5D86B4">
+                <p style="font-size: 25px; margin-left:50px;margin-top:-15px;color:#425de6">
                     Problems
                 </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 mt-5 ml-5">
-                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color:  #06BEB6"
+                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color:  rgb(77, 187, 241)"
                     class="mt-1">
                     <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px">
                         250+
                     </p>
                 </div>
-                <p class="offset-1  mt-4 font-weight-bold" style="color:#5D86B4; font-size: 35px;margin-left:-60px;">
+                <p class="offset-1  mt-4 font-weight-bold" style="color:#425de6; font-size: 35px;margin-left:70px;">
                     Git
                 </p>
-                <p style="font-size: 25px; margin-left: -50px;margin-top:-20px;color:#5D86B4">
+                <p style="font-size: 25px; margin-left:50px;margin-top:-20px;color:#425de6">
                     Commits
                 </p>
             </div>
