--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 mt-5 ml-5">
-                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color: rgb(77, 187, 241)"
+                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid rgb(77, 187, 241)"
                     class="mt-1">
                     <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px">
                         50+
@@ -256,7 +256,7 @@
                 </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 mt-5 ml-5">
-                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid;border-color:  rgb(77, 187, 241)"
+                <div style="width: 200px;height:200px; background: #C8F2EE;border-radius: 50%;border:20px solid rgb(77, 187, 241)"
                     class="mt-1">
                     <p class="text-center font-weight-bold" style="margin-top: 55px;font-size: 35px">
                         250+
