Updated my image and resume

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+/>
     <script src="https://unpkg.com/github-calendar@1.3.1/dist/github-calendar.min.js"></script>
 </head>
 <style type="text/css">
@@ -71,7 +73,7 @@
     <div class="slantBox"></div>
     <div class="marginBox">
         <img style="height: 160px; width:160px;border:12px solid #40C4FF" class="rounded-circle"
-            src="img/soundarya.jpg">
+            src="img/soundaryaProfile.jpg">
             <div style="background:rgb(77, 187, 241)" class="rounded-circle dotcircle"></div>
             <div class="text-center  contentDetails"  style="background-color: rgba(233,236,239,0);">
                 <h1 class="text-white"><strong>Soundarya M &nbsp;</strong></h1>
@@ -92,7 +94,7 @@
                 </ul>
                 <p class="text-center text-muted">
                     I'm a Full Stack Developer with the curios mind to learn new things.<br/> Ready to join in a team to expose my skills
-                <a href="img/soundaryaResume.pdf" download target="blank"> My Profile</a>&nbsp;</p>
+                <a href="img/Soundarya's Resume.pdf" download target="blank"> My Profile</a>&nbsp;</p>
                 </p>
 
             </div> 
@@ -132,8 +134,8 @@
    
     <div class="container">
         <div class="row justify-content-center">            
-            <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro5.jpg" class="card-img-top" alt="Typing Master" >
+            <div class="card col-8 col-sm-8 col-md-5 col-lg-3 p-2 m-3" style="width: 25rem;background:#F5F5F5;">
+                <img src="project/pro5.jpg" class="card-img-top" alt="Typing Master"  height="180px" style="padding: 10px;" >
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Typing Master</strong></h5>
                     <p class="card-text"> typing game with accuracy word per minute  are some of the features in this project HTML , CSS, Bootstrap ,ES6, JavaScript</p>
@@ -150,8 +152,8 @@
                 </div>
             </div>        
                  
-            <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro4.JPG" class="card-img-top" alt="Food Delivary System">
+            <div class="card col-8 col-sm-8 col-md-5 col-lg-3 p-2 m-3" style="width: 25rem;background:#F5F5F5;">
+                <img src="project/pro4.JPG" class="card-img-top" alt="Food Delivary System"  height="180px" style="padding: 10px;">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Food Delivary System</strong></h5>
                     <p class="card-text">Basic concepts of food Delivary system using HTML, CSS, JavaScript,LocalStorage,URL Search params</p>
@@ -166,8 +168,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro3.JPG" class="card-img-top" alt="Recipe Book">
+            <div class="card col-8 col-sm-8 col-md-5 col-lg-3 p-2 m-3" style="width: 25rem;background:#F5F5F5;">
+                <img src="project/pro3.JPG" class="card-img-top" alt="Recipe Book"  height="180px" style="padding: 10px;">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Recipe Book</strong></h5>
                     <p class="card-text">Project with Recipe Book with mealDB API.<br>HTML, Advance CSS<br> JavaScript, XHR</p>
@@ -187,8 +189,8 @@
         </div>
         <div class="row justify-content-center">  
             
-            <div class="card col-12 col-md-3 p-2 m-3" style="width: 25rem;">
-                <img src="project/pro2.JPG" class="card-img-top" alt="Food Delivary System">
+            <div class="card col-8 col-sm-8 col-md-5 col-lg-3 p-2 m-3" style="width: 25rem;background:#F5F5F5;">
+                <img src="project/pro2.JPG" class="card-img-top" alt="Food Delivary System"  height="180px" style="padding: 10px;">
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Food Delivary System</strong></h5>
                     <p class="card-text">Next responsive project.<br>Media queries,CSS combinators , Box Model, Floats, Flex and Grids etc.</p>
@@ -203,8 +205,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-12 col-md-3  m-3" style="width: 25rem;">
-                <img src="project/pro1.JPG" class="card-img-top" alt="Nutrition Source" >
+            <div class="card col-8 col-sm-8  col-md-5 col-lg-3 p-2 m-3" style="width: 25rem;background:#F5F5F5;" >
+                <img src="project/pro1.JPG" class="card-img-top" alt="Nutrition Source" height="180px" style="padding:10px;" >
                 <div class="card-body text-center">
                     <h5 class="card-title"><strong>Recipe</strong></h5>
                     <p class="card-text">Very first project.<br>Taken the content for recipe and Nutrition<br>HTML and CSS </p>
@@ -272,12 +274,15 @@
         </div>
     </div>
     <center>
-        <div class="shadow-none  bg-light rounded col-lg-9 col-md-12 col-sm-12" style="margin-bottom: 100px">
+        <div class="shadow-none  rounded col-lg-9 col-md-12 col-sm-12" style="margin-bottom: 100px">
             <div class="calendar">
                 Here is Git Status!!
             </div>
         </div>
     </center>
+    <script
+        src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+    </script>
     <script type="text/javascript">
         GitHubCalendar(".calendar", "soundaryamecse",
             {
